changed url to music; added lazyload to files; fixed page responisveness; improved loading time; worked on page alignment

--- a/mp.css
+++ b/mp.css
@@ -27,7 +27,7 @@ body::-webkit-scrollbar-thumb {
   transition: all 1.5s;
   background-color: white;
   overflow: hidden;
-  position: absolute;
+  position: relative;
   top:0;
   left:0;
   z-index: 1;
@@ -49,8 +49,8 @@ a{
 }
 #content1{
   transition: all 1.5s;
-  position: absolute;
-  top: 100vh;
+  position: relative;
+  top: 0vh;
   left: 0vw;
   z-index:2;
 }
@@ -73,27 +73,25 @@ a{
   max-height: 130vh;
   position: relative;
   background-color: rgba(252, 252, 252, 1);
-  z-index: -1;
+  z-index: 1;
+  margin: 0;
+  padding: 0;
+  border: none;
+  left: 0;
 }
 #content2{
-  z-index: 1;
   background: rgb(255, 255, 255);
   background: radial-gradient(circle, rgba(0, 0, 0, 1) -200%, rgba(255, 255, 255, 1) 100%);
-  top: 230vh;
 }
 #content3{
-  z-index: 1;
   background: rgb(0, 0, 0);
-  background: radial-gradient(circle, rgba(255, 255, 255, 1) -200%, rgba(0, 0, 0, 1) 100%);
-  top: 360vh;
 }
 #content4{
   /** color: rgba(227, 229, 232 ,1); **/
   color: rgba(0, 0, 0, 1);
-  z-index: 1;
   background-color: rgba(0, 0, 0, 1);
-  top: 490vh;
-  height: 100vh;
+  height: 3000px;
+  max-height: 100vh;
 }
 .black_link{
   color: black;
@@ -315,9 +313,9 @@ a{
   opacity: 1;
 }
 #volume::before{
-  content: '🔈';
+  content: 'Volume';
   position: absolute;
-  left: -10px;
+  left: -100px;
   text-align: right;
   top: 0;
   height: 100%;
@@ -383,7 +381,11 @@ input[type="range"]::-webkit-slider-thumb{
 
 /** for mobile stuff **/
 
-
+@media only screen and (max-width: 820px) {
+  #volume{
+    display: none;
+  }
+}
 
 /* The animation code */
 
